--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve ",
     "build": "ng build --output-path docs --base-href /technical-challenge/",
-    "buildProd": "ng build --prod --output-path docs --base-href /technical-challenge/",
+    "buildProd": "ng build --watch --prod --output-path docs --base-href /technical-challenge/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
