--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "proxyConfig": "src/proxy.conf.json"
+            "scripts": []
           },
           "configurations": {
             "production": {
